# mcu-solver-benchmarks

./: .gitignore  .gitmodules  README.md
ICRA_benchmarks/: README.md
nucleo-f401re-UART-test/: platformio.ini
osqp-v0.6.3-macOS/include/: osqp_configure.h  version.h
osqp-v0.6.3-macOS/lib/: libosqp.dylib
qp_mpc_problem/: gen_code_osqp.py  gen_mpc_problem.py  move_to_mcu_dir.py
qp_mpc_problem/generated_osqp_solver/: osqp_configure.h  osqp_data_workspace.c  osqp_data_workspace.h
rand_prob_gen/: gen_code_osqp.py  move_to_mcu_dir.py  osqp_example.py
rand_prob_gen/generated_osqp_solver/: emosqp.c
rocket_landing/: README.md  cpg_example.c  early_termination_test.py  ecos_main.c  gen_mpc_problem.py  gen_rocket.py  rocket_landing_cvxpy_scs.py  run_ecos.py  scs_main.c  test_rocket_2.py  utils.py
rocket_landing/tinympc/tinympc_generated/: CMakeLists.txt
rocket_landing/tinympc/tinympc_generated/examples/: rocket_landing_mpc.c  rocket_landing_mpc.cpp
rocket_landing/tinympc/tinympc_generated/src/tinympc/: glob_opts.hpp
safety_filter/: README.md  emosqp.c  gen_mpc_problem.py  safety_filter.ipynb  utils.py
safety_filter/osqp_generated/: emosqp  emosqp.c  osqp_configure.h  osqp_data_workspace.c  osqp_data_workspace.h  (+1 more)
socp_problem/: README.md  cpg_example.c  socp_codegen.py
stm32_feather_tinympc/: stm32_feather_tinympc.ino
teensy_benchmarks/: platformio.ini
teensy_osqp_benchmark/: platformio.ini
teensy_tinympc_benchmark/: CMakeLists.txt
teensy_tinympc_benchmark/include/: types.hpp
teensy_tinympc_benchmark/lib/tinympc/: library.json
teensy_tinympc_benchmark/src/: admm.cpp
(+422 files in other folders)
